<resources>
    <string name="app_name">ShopPal</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_account">Don\'t have and account?</string>
    <string name="register">Register</string>

    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_lastname">Last name</string>
    <string name="hint_firstname">First name</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login">Login</string>
    <string name="err_msg_enter_first_name">Please enter your first name</string>
    <string name="err_msg_enter_last_name">Please enter your last name</string>
    <string name="err_msg_enter_email">Please enter your email</string>
    <string name="err_msg_enter_password">Please enter a password</string>
    <string name="err_msg_confirm_password">Passwords don\'t match</string>
    <string name="err_msg_accept_terms">You should accept the terms and conditions</string>
    <string name="et_confirm_password">Confirm Password</string>
    <string name="msg_register_successful">You have successfully registered</string>
    <string name="please_wait">Please wait..</string>
    <string name="login_success">Login Successful</string>
    <string name="forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_subtitle">Enter your account email, we will send you a reset password request to recover it</string>
    <string name="btn_submit_lbl">SUBMIT</string>
    <string name="email_sent_successfully">Email sent successfully</string>
    <string name="profile_title">PROFILE</string>
    <string name="edit_profile_title">EDIT PROFILE</string>
    <string name="hint_mobile">Mobile number</string>
    <string name="radio_button_male_text">MALE</string>
    <string name="radio_button_female_text">FEMALE</string>
    <string name="save_profile_btn_text">SAVE PROFILE</string>
    <string name="storage_permission_denied">Storage permission denied</string>
    <string name="err_msg_enter_phone_number">Please enter a phone number</string>
    <string name="profile_updated">Profile updated</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_products">Products</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="title_settings">Settings</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="button_text_logout">LOGOUT</string>
</resources>