<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.activities.LoginActivity">

    <FrameLayout
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/splash"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"/>

        <dev.demo.shoppal.utils.MSPTextViewBold
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/splash_title_text_size"/>

    </FrameLayout>

    <dev.demo.shoppal.utils.MSPTextViewBold
        android:id="@+id/login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_login"
        android:layout_marginTop="35dp"
        android:textColor="@color/purple_700"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="35dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/purple_200"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="20dp"
        android:hint="@string/et_hint_password"
        android:textColorHint="@color/purple_200"
        app:helperTextTextColor="@color/purple_500"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <dev.demo.shoppal.utils.MSPTextViewBold
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="@id/ti_password"
        app:layout_constraintTop_toBottomOf="@id/ti_password"
        app:layout_constraintBottom_toTopOf="@id/btn_login"
        android:text="@string/lbl_forgot_password"/>

    <dev.demo.shoppal.utils.MSPButton
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="@dimen/btn_padding"
        android:text="@string/btn_lbl_login"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_forgot_password"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        android:gravity="center"
        android:layout_marginTop="20dp">

        <dev.demo.shoppal.utils.MSPTextViewBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_account"
            android:layout_marginEnd="10dp"/>

        <dev.demo.shoppal.utils.MSPTextViewBold
            android:id="@+id/lbl_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/purple_500"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>