<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.ForgotPasswordActivity">


    <FrameLayout
        android:id="@+id/header_title"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/auth_header_image_height"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/splash"
            android:contentDescription="@string/content_description"
            android:scaleType="fitXY"/>

        <dev.demo.shoppal.utils.MSPTextViewBold
            android:layout_width="@dimen/auth_logo_width_size"
            android:layout_height="@dimen/auth_logo_height_size"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/splash_title_text_size"/>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center"/>
    </FrameLayout>

    <dev.demo.shoppal.utils.MSPTextViewBold
        android:id="@+id/forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_marginTop="35dp"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header_title"/>

    <dev.demo.shoppal.utils.MSPTextViewBold
        android:id="@+id/forgot_password_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_title"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:textAlignment="center"
        android:textSize="15sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="35dp"
        android:hint="@string/et_hint_email_id"
        android:textColorHint="@color/purple_200"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgot_password_subtitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_recover_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>

    <dev.demo.shoppal.utils.MSPButton
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="@dimen/btn_padding"
        android:text="@string/btn_submit_lbl"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_email"
        android:layout_marginTop="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>