<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.UserProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:background="@drawable/toolbar_gradient_background">

        <TextView
            android:id="@+id/tv_profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:layout_gravity="center"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp"
            android:gravity="center">

            <FrameLayout
                android:layout_width="130dp"
                android:layout_height="130dp">

                <ImageView
                    android:id="@+id/user_img"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/ic_profile_image_placeholder"
                    android:scaleType="fitXY"
                    android:padding="5dp"
                    android:contentDescription="@string/content_description"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_profile_image_background"/>
            </FrameLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_firstname"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/lightGray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_firstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"/>

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_lastname"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/lightGray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_lastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/et_hint_email_id"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/lightGray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/lightGray"
                android:hint="@string/hint_mobile"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ti_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="phone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/rb_gender"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <dev.demo.shoppal.utils.MSPRadioButton
                    android:id="@+id/rb_male"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/gender_tab_selector"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="@string/radio_button_male_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />

                <dev.demo.shoppal.utils.MSPRadioButton
                    android:id="@+id/rb_female"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:background="@drawable/gender_tab_selector"
                    android:button="@null"
                    android:gravity="center"
                    android:text="@string/radio_button_female_text"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    />
            </RadioGroup>

            <dev.demo.shoppal.utils.MSPButton
                android:id="@+id/btn_save_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="center"
                android:text="@string/save_profile_btn_text"
                android:textColor="@color/white"
                android:textSize="@dimen/btn_text_size"
                android:background="@drawable/button_background"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>